--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="description" content="time card" />
     <title>Date</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
